--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Olof Dahlbom",
   "license": "MIT",
   "dependencies": {
-    "ms-signalr-client": "^2.2.7",
+    "ms-signalr-client": "https://github.com/docongminh1/ms-signalr-client",
     "jquery-deferred": "^0.3.1"
   }
 }
